--- a/_site.yml
+++ b/_site.yml
@@ -4,7 +4,9 @@ navbar:
   title: "Home"
   right:
     - text: "Resume/CV"
-      href: Resume.html      
+      href: Resume.html 
+    - text: "Dashboard"
+      href: Plots.html       
     - icon: fa-envelope fa-lg
       href: mailto:<frances.williams@columbia.edu>
     - icon: fa-linkedin fa-lg
